# space_invaders

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: enemy.c.0DE09E6B1799555B.idx  enemy.h.C27E3DF40A7B19B7.idx  game.c.0D014A3B27F6ED92.idx  game.h.AD519D36957A4431.idx  init.c.DCA8EC1CD5716559.idx  init.h.B1778832A6669DE8.idx  level.c.0E22CBD6ADED3C51.idx  level.h.EFF9C0FEC1A28035.idx  main.c.27C96B9120689292.idx  player.c.FA1644A0B65F0825.idx  player.h.F34CB146C6752231.idx  renderer.c.D34893F8DE9685EF.idx  renderer.h.D620F0B78F35A238.idx  sprite_map.c.E8DDB29FA3A86874.idx  sprite_map.h.EC6CD65EF8AE4CF9.idx
src/: enemy.c  enemy.h  execution.c  execution.h  game.c  game.h  init.c  init.h  level.c  level.h  main.c  player.c  player.h  renderer.c  renderer.h  sprite_map.c  sprite_map.h
src/assets/: assets.c  assets.h  background_assets.c  background_assets.h  enemy_assets.c  enemy_assets.h  miscellaneous_assets.c  miscellaneous_assets.h  projectiles_assets.c  projectiles_assets.h  sound_assets.c  sound_assets.h  spaceship_assets.c  spaceship_assets.h  ttf_assets.c  ttf_assets.h  ui_assets.c  ui_assets.h
src/enemy/: enemy.c  enemy.h
src/game/: game.c  game.h  game_states.h  handle_colissions.c  handle_colissions.h
src/game/update/: game_update.c  game_update.h  update_audio.c  update_audio.h  update_menu_state.c  update_menu_state.h  update_pause_state.c  update_pause_state.h  update_playing_state.c  update_playing_state.h  update_settings_state.c  update_settings_state.h
src/level/: level.c  level.h
src/renderer/: render_game_over.c  render_game_over.h  render_level.c  render_level.h  render_menu.c  render_menu.h  render_options.c  render_options.h  render_pause.c  render_pause.h  render_playing.c  render_playing.h  render_welcome.c  render_welcome.h  renderer.c  renderer.h
